test/valid/ParameterAndFieldWithSameName/ParameterAndFieldWithSameName.plume
/**
 * Uma classe com um field e um parametro de um metodo com o mesmo nome
 * nao eh possivel terem o mesmo nome no plume
 *
 * @author 37059, Rita Henriques
 * @version $Id: ParameterAndFieldWithSameName.plume 286 2012-05-01 10:24:19Z tcomp000 $
 */
class ParameterAndFieldWithSameName extends Object is
  
  field name : String
  
  method printName : ( name : String ) -> String is
  		"Name: " + name